--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homepage</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/lasagna.html">Lasagna</a>
 </body>
 </html>
