added new recipes and edited index.html

--- a/recipes/pickledshrimp.html
+++ b/recipes/pickledshrimp.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>
+    <title>Pickled Shrimp</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
-    <img src="lasgna.jpg" alt="Lasagna" height="300" width="500">
+    <a href="../index.html">Home</a>
+    <h1>Pickled Shrimp</h1>
+    <img src="pickledshrimp.jpg" alt="Pickled Shrimp" height="300" width="200">
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam dolor magni repellat placeat rerum numquam, tenetur optio iste. Delectus architecto ipsam quasi assumenda perferendis recusandae eum ipsum dolorum ea iusto?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ex vitae sit dolorem ducimus eaque, neque dolor sed modi aperiam pariatur ratione, numquam, earum magnam corporis nam praesentium quod suscipit placeat impedit nostrum dolores?</p>
     <br>
-    <a href="../index.html">Home</a>
 </body>
 </html>
