--- a/recipes/MushroomBouchees.html
+++ b/recipes/MushroomBouchees.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>
+    <title>Mushroom Bouchees</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
-    <img src="lasgna.jpg" alt="Lasagna" height="300" width="500">
+    <a href="../index.html">Home</a>
+    <h1>Mushroom Bouchees</h1>
+    <img src="mushroombouchees.jpg" alt="Mushroom Bouchees" height="300" width="400">
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam dolor magni repellat placeat rerum numquam, tenetur optio iste. Delectus architecto ipsam quasi assumenda perferendis recusandae eum ipsum dolorum ea iusto?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ex vitae sit dolorem ducimus eaque, neque dolor sed modi aperiam pariatur ratione, numquam, earum magnam corporis nam praesentium quod suscipit placeat impedit nostrum dolores?</p>
     <br>
-    <a href="../index.html">Home</a>
+
 </body>
 </html>
